Added /tmp logo to the mobile site

--- a/assets/css/app.customise.css
+++ b/assets/css/app.customise.css
@@ -58,3 +58,10 @@ label[for='share-link-fileref'] {
 .help-block {
     font-size: 1.3rem;
 }
+
+
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    .sprite {
+        background-image: url(../../img/sprite.png);
+    }
+}
