Changed min-height of the header to be 0 on non-landing page

--- a/assets/css/app.customise.css
+++ b/assets/css/app.customise.css
@@ -64,7 +64,7 @@ label[for='share-link-fileref'] {
  */
 
 .header-override {
-    min-height: auto !important;
+    min-height: 0 !important;
     padding: inherit;
 }
 
