Added input field for email

--- a/assets/css/app.customise.css
+++ b/assets/css/app.customise.css
@@ -51,7 +51,7 @@
     margin: 45px 0 0 0;
 }
 
-label[for='share-link-fileref'] {
+label[for='share-link-fileref'], label[for='share-link-via-email'] {
     font-weight: normal;
 }
 
