Added spinner when sending email

--- a/assets/css/app.customise.css
+++ b/assets/css/app.customise.css
@@ -60,6 +60,13 @@ label[for='share-link-fileref'], label[for='share-link-via-email'] {
 }
 
 /**
+ * Share link dialog
+ */
+#spinner {
+  display: none;
+}
+
+/**
  * Non-landing page style overrides
  */
 
