--- a/assets/css/app.customise.css
+++ b/assets/css/app.customise.css
@@ -89,9 +89,14 @@ label[for='share-link-fileref'], label[for='share-link-via-email'] {
  * Viewer page
  */
 
+.viewer-container {
+  height: 90%;
+  margin: 10px 10px 0 10px;
+}
+
 .viewer {
   height: 100%;
-  margin: 10px 10px 0 10px;
+  margin-top: 20px;
   border: 1px solid #e2e2e2;
 }
 
@@ -99,4 +104,8 @@ label[for='share-link-fileref'], label[for='share-link-via-email'] {
   width:100%;
   height: 100%;
   border: 0;
+}
+
+.btn-download {
+  float: right;
 }
