Improve the look of the frame viewer by stretching it to bottom of page

--- a/assets/css/app.viewer.css
+++ b/assets/css/app.viewer.css
@@ -1,14 +1,15 @@
 html, body {
   height: 100%;
-}
-
-.container-fluid {
-  min-height: 100%;
-  overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .viewer-frame {
+  flex: 1;
+  border: 0;
   width: 100%;
-  height: 100%;
+}
+
+.viewer-frame body {
   border: 1px solid #e2e2e2;
 }
